domibusConnector/domibusConnectorIntegrationTests/src/main/resources/k8s/templates/ecx-connector-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecx-connector-client-lab${lab.id}
  namespace: ju-eu-ejustice-eqs
  labels:
    pod.cp.cna.at/ingress: allow
    product: ju-eu-ejustice-eqs
spec:
  selector:
    app: ecx-connector-client-lab${lab.id}
  ports:
  - name: ecx-connector-client-lab${lab.id}-port
    targetPort: 8080
    protocol: TCP
    port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl-lab${lab.id}-ecx-connector-client
  namespace: ju-eu-ejustice-eqs
  labels:
    pod.cp.cna.at/ingress: allow
    product: ju-eu-ejustice-eqs
    app: ecx-connector-client-lab${lab.id}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecx-connector-client-lab${lab.id}
  template:
    metadata:
      labels:
        pod.cp.cna.at/ingress: allow
        product: ju-eu-ejustice-eqs
        app: ecx-connector-client-lab${lab.id}
    spec:
      volumes:
      - name: ecx-keystores
        configMap:
          name: ecx-keystores
          defaultMode: 420
      - name: temp
        emptyDir: {}
      - name: storage
        persistentVolumeClaim:
          claimName: ecx-connector-client-lab${lab.id}-storage
      containers:
      - name: cnt-ecx-connector-client
        image: default-route-openshift-image-registry.apps.a2.cp.cna.at/ju-eu-ejustice-eqs/dc-connector-client:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: 512M
            cpu: 100m
          limits:
            memory: 1024M
            cpu: 200m
        volumeMounts:
        - name: storage
          mountPath: /app/data
          subPath: lab${lab.id}/connector-client
        - name: storage
          mountPath: /app/data/messages
          subPath: lab${lab.id}/connector-client/messages
        - name: ecx-keystores
          mountPath: /app/config/keystores
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ecx-connector-client-lab${lab.id}-route
  namespace: ju-eu-ejustice-eqs
spec:
  host: ecx-connector-client-lab${lab.id}-ju-eu-ejustice-eqs.apps.a2.cp.cna.at
  to:
    kind: Service
    name: ecx-connector-client-lab${lab.id}
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
